--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,10 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+Include/*
+Lib/*
+Scripts/*
+pyvenv.cfg
 # Spyder project settings
 .spyderproject
 .spyproject
